--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; padding-top: 20px; }
+    .attribution { font-size: 11px; text-align: center; padding-top: 20px; color: #ffffff; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
@@ -22,6 +22,11 @@
       </div>
       <div class="card-body">
         <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer experience, and overall efficiency.</p>
+      </div>
+      <div class="stats">
+          <h2>10k+ <br><span class="bottom_stats">COMPANIES</span></h2>
+          <h2>314 <br><span class="bottom_stats">TEMPLATES</span></h2>
+          <h2>12M+ <br><span class="bottom_stats">QUERIES</span></h2>
       </div>
     </div>
     <div class="hero">
